--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
                 to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         </section>
-        <section>
+        <section class="preparation">
             <h2>Preparation time</h2>
             <ul>
                 <li><b>Total:</b> Approximately 10 minutes</li>
