--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><b>Cooking:</b> 5 minutes</li>
             </ul>
         </section>
-        <section>
+        <section class="ingredients">
             <h2>Ingredients</h2>
             <ul>
                 <li>2-3 large eggs</li>
