--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
         </section>
         <hr>
-        <section>
+        <section class="instructions">
             <h2>Instructions</h2>
             <ol>
                 <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
