--- a/index.html
+++ b/index.html
@@ -71,26 +71,26 @@
             </ol>
         </section>
         <hr>
-        <section>
+        <section class="nutrition">
             <h2>Nutrition</h2>
             <p>The table below shows nutritional values per serving without the additional fillings.</p>
             <table>
                 <tbody>
                 <tr>
-                    <td>Calories</td>
-                    <td>277kcal</td>
+                    <td class="table__name">Calories</td>
+                    <td class="table__value">277kcal</td>
                 </tr>
                 <tr>
-                    <td>Carbs</td>
-                    <td>0g</td>
+                    <td class="table__name">Carbs</td>
+                    <td class="table__value">0g</td>
                 </tr>
                 <tr>
-                    <td>Protein</td>
-                    <td>20g</td>
+                    <td class="table__name">Protein</td>
+                    <td class="table__value">20g</td>
                 </tr>
                 <tr>
-                    <td>Fat</td>
-                    <td>22g</td>
+                    <td class="table__name">Fat</td>
+                    <td class="table__value">22g</td>
                 </tr>
                 </tbody>
             </table>
