--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <figure>
         <img src="./assets/images/image-omelette.jpeg" alt="Omelette image">
     </figure>
-    <article>
-        <section class="title">
+    <article class="recipe">
+        <section class="recipe__title">
             <h1>Simple Omelette Recipe</h1>
             <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
                 to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         </section>
-        <section class="preparation">
+        <section class="recipe__preparation">
             <h2>Preparation time</h2>
             <ul>
                 <li><b>Total:</b> Approximately 10 minutes</li>
@@ -29,7 +29,7 @@
                 <li><b>Cooking:</b> 5 minutes</li>
             </ul>
         </section>
-        <section class="ingredients">
+        <section class="recipe__ingredients">
             <h2>Ingredients</h2>
             <ul>
                 <li>2-3 large eggs</li>
@@ -40,7 +40,7 @@
             </ul>
         </section>
         <hr>
-        <section class="instructions">
+        <section class="recipe__instructions">
             <h2>Instructions</h2>
             <ol>
                 <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
@@ -71,26 +71,26 @@
             </ol>
         </section>
         <hr>
-        <section class="nutrition">
+        <section class="recipe__nutrition">
             <h2>Nutrition</h2>
             <p>The table below shows nutritional values per serving without the additional fillings.</p>
             <table>
                 <tbody>
                 <tr>
-                    <td class="table__name">Calories</td>
-                    <td class="table__value">277kcal</td>
+                    <td class="nutrition-table__name">Calories</td>
+                    <td class="nutrition-table__value">277kcal</td>
                 </tr>
                 <tr>
-                    <td class="table__name">Carbs</td>
-                    <td class="table__value">0g</td>
+                    <td class="nutrition-table__name">Carbs</td>
+                    <td class="nutrition-table__value">0g</td>
                 </tr>
                 <tr>
-                    <td class="table__name">Protein</td>
-                    <td class="table__value">20g</td>
+                    <td class="nutrition-table__name">Protein</td>
+                    <td class="nutrition-table__value">20g</td>
                 </tr>
                 <tr>
-                    <td class="table__name">Fat</td>
-                    <td class="table__value">22g</td>
+                    <td class="nutrition-table__name">Fat</td>
+                    <td class="nutrition-table__value">22g</td>
                 </tr>
                 </tbody>
             </table>
